cymed/deploy/k8s/base/service.api.yaml
apiVersion: v1
kind: Service
metadata:
  name: cymed-api
  namespace: cymed
  labels:
    app.kubernetes.io/name: cymed-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: cymed-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cymed-api
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  sessionAffinity: None
